# contactkeeper-Java

./: .gitignore  docker-compose.yml  fix-mongodb.bat  fix-mongodb.sh  start-backend.bat  start-backend.sh
Documentation/: GitHub_AppPassword.txt  QUICK_START.md  README.md  Steps.md  mongodb_commands.md
backend/: .gitignore  pom.xml
backend/Documentation/: MONGODB_SETUP.md  README.md  what we accomplished.md
backend/src/main/resources/: application.yml
backend_cpp/: .gitignore  CMakeLists.txt  README.md  config.json  docker-compose.yml
backend_cpp/Documentation/: ProjectOutline.md
backend_cpp/docker/: Dockerfile
backend_cpp/src/: main.cpp
backend_cpp/src/controllers/: AuthController.cc  AuthController.h  ContactsController.cc  ContactsController.h  UsersController.cc  UsersController.h
backend_cpp/src/filters/: JwtAuthFilter.cc  JwtAuthFilter.h
frontend/: .gitignore  angular.json  karma.conf.js  package-lock.json  package.json
frontend/Documentation/: CONFIGURATION_COMPARISON.md  ENVIRONMENT_EXAMPLES.md  ENVIRONMENT_SETUP.md  README.md  frontend.md
frontend/scripts/: build-with-env.js
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/interceptors/: auth.interceptor.ts
frontend/src/app/models/: contact.model.ts  user.model.ts
frontend/src/app/services/: alert.service.spec.ts  alert.service.ts  api-config.service.spec.ts  api-config.service.ts  (+2 more)
frontend/src/environments/: environment.prod.ts  environment.staging.ts  environment.ts  environment.types.ts  environment.uat.ts
(+60 files in other folders)
